# spotivis

./: .dockerignore  .env.example  .env.template  .flaskenv  .gitignore  .pre-commit-config.yaml  .prettierrc  BUILD.md  CLAUDE.md  Dockerfile  Makefile  README.md  app.py  boot.sh  config.py  create_data.py  docker-compose.dev.yml  docker-compose.yml  extract_rows.py  package-lock.json  package.json  pyproject.toml  start.sh  tailwind.config.js  template-app.env  template_app.py  tsconfig.json  vite.config.ts
.claude/: settings.local.json
app/: __init__.py  models.py
app/api/: __init__.py  api.py
app/auth/: forms.py  routes.py
app/errors/: handlers.py
app/extensions/: __init__.py  admin.py  celery.py  security.py
app/helpers/: app_helpers.py
app/main/: routes.py
app/main/first/: __init__.py  combine_routes.py  routes.py
app/main/second_page/: __init__.py  routes.py
app/main/users/: __init__.py  routes.py
app/public/: __init__.py  routes.py
app/static/css/: input.css  output.css  output.min.css
app/static/favicon/: site.webmanifest
app/static/js/htmx/: htmx.js
app/tasks/: combine_datasets.py  playlist_enrichment.py  preprocessing.py
app/templates/: base.html  base_base.html
app/templates/auth/: auth_base.html  login.html  register.html
app/templates/components/: theme_selector.html  theme_toggle.html  theme_toggle_inline.html
app/templates/errors/: 404.html  500.html  maintenance.html
app/templates/first/: combine_files.html  combined_graph_preview.html  file_preview.html  graph_preview.html  index.html  processed_view.html
app/templates/first/partials/: _combine_progress.html  _combine_started.html  _combined_history.html  _content.html  _enrichment_progress.html  _enrichment_started.html  _error.html  _file_list.html  _file_row.html  _graph_preview.html  _preprocess_error.html  _preprocess_started.html  _preprocessing_history.html  _preview_data.html  _publish_button.html  _task_progress.html  _top_bar.html  _upload_error.html  _upload_success.html
app/templates/invest/: invest.html  order_cancel.html  order_success.html
app/templates/partials/: _back_top_bar.html  _bottom_nav.html  _flash-messages.html  _flash_message.html  _search_table_rows.html  _top_nav.html  graph_controls.html  graph_tooltip.html  node_size_selector.html
app/templates/public/: graph_view.html  index.html
app/templates/second_page/: index.html
app/templates/second_page/partials/: _content.html
app/templates/security/: base.html  change_email.html  change_password.html  forgot_password.html  login_user.html  register_user.html  reset_password.html  send_confirmation.html  verify.html
app/templates/security/partials/: _no_account.html
app/templates/users/: index.html  profile.html  settings.html
app/templates/users/partials/: _content.html  _friend-requests.html  _friends.html  _profile_content.html  _settings_content.html  _settings_top_bar.html
app/typescript/: combined-graph.ts  graph-preview.ts
clean_data/: pruned_graph84_edges.csv  pruned_graph_84_nodes.csv
instance/: dev.db
migrations/versions/: 02ada276f374_add_on_delete_cascaed_to_preprocessing_.py  112af16d2442_remove_confirmed_column_because_handled_.py  24e363bf8a97_add_combinedpreprocessingjob_model_for_.py  33e2f4f9a45d_remove_payments_table.py  343670950c0f_use_id_username_email_and_password_from_.py  3526b4c1d6e5_add_on_delete_cascade_to_delete_user.py  38bb912ca62e_add_created_and_updated_timestamp_to_.py  3ee2ed9a56e3_add_playlistenrichmentjob_model.py  448558f5b342_add_uploadedfile_and_preprocessingjob_.py  46e77fd6dc35_add_data_start_date_and_data_end_date_.py  61aefbc04a73_remove_uploaded_at_since_it_is_in_.py  71da8a3b2cec_add_published_fields_to_jobs.py  796888740542_drop_filename_and_original_filename_for_.py  90c0f9cf161e_add_on_delete_cascade_to_delete_user_.py  9ceb6a3b3fcd_add_on_delete_cascade_to_delete_user_.py  9e4618e3a165_use_back_populates_instead_of_backref.py  a10264213789_initial_migration.py  a480cc2dda67_add_flask_security_user.py  b4012e3fe836_updated_payments_class_to_sqla2.py  b851e956f290_initial_migration.py  b886665b1dc3_add_consistend_constraint_names.py  bbee5b3c3b72_initial_migration.py  bff9f3199e21_recreate_all_tables.py  c0b52c287e97_add_uuid_to_uploaded_files.py  cd6a4ccfcbb5_change_preprocessingjob_id_to_uuid.py  d09e626e499a_add_graph_statistics_fields_to_.py  e2737709934a_task_id_can_be_null_on_prepocessing_task.py  ebff045d3780_uopdate_friendrequest_to_sqla2_and_use_.py
nginx/: Dockerfile  nginx.conf
tests/: README.md  conftest.py  test_file_upload.py  test_user_deletion.py
