[tool.poetry]
name = "spotivis"
version = "0.1.0"
description = ""
authors = ["Cederic Demoulin <cdemoulin@protonmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.35"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
flask-login = "^0.6.3"
posthog = "^3.6.6"
stripe = "^11.0.0"
python-dotenv = "^1.0.1"
pymysql = "^1.1.1"
flask-wtf = "^1.2.1"
bleach = "^6.1.0"
email-validator = "^2.2.0"
gunicorn = "^23.0.0"
flask-security = {extras = ["common", "fsqla"], version = "^5.6.1"}
setuptools = "^78.1.0"
celery = "^5.5.3"
redis = "^6.2.0"
flask-admin = {extras = ["sqlalchemy"], version = "^2.0.0a4"}
flask-htmx = "^0.4.0"
isort = "^6.0.1"
pyarrow = "^21.0.0"
pytest = "^8.4.1"
pyarrow-stubs = "^20.0.0.20250716"
pandas = "^2.3.1"
flask-caching = "^2.3.1"
pandas-stubs = "^2.3.0.250703"
loguru = "^0.7.3"
networkx = "^3.4.2"
tqdm = "^4.67.1"
types-tqdm = "^4.67.0.20250516"
types-networkx = "^3.5.0.20250728"
celery-types = "^0.23.0"


[tool.poetry.group.dev.dependencies]
ruff = "*"
black = "*"
mypy = "^1.11.2"
types-flask = "^1.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
